<resources>
    <string name="app_name">RatTaggingApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save">save</string>
    <string name="event_name">Event name</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login_or_register">login or register</string>
    <string name="birth_date">birth date</string>
    <string name="name">name</string>
    <string name="sex">sex</string>
    <string name="register">register</string>
    <string name="login">login</string>

    <string name="add_rat">Add rat</string>
    <string name="register_rats">register rats</string>
    <string name="save_tag_list">save tag list</string>
    <string name="back">back</string>

    <string-array name="rat_emotion_array">
        <item>positive</item>
        <item>negative</item>
        <item>neutral</item>
    </string-array>
    <string-array name="rat_sex_array">
        <item>female</item>
        <item>male</item>
    </string-array>

</resources>